fixed title jumping on click on mobile

--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -203,7 +203,7 @@
 
     .contact-home {
         width: 375px;
-        height: 440px;
+        height: 430px;
         display: flex;
         justify-content: center;
         align-items: center;
